--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -52,6 +52,11 @@
         margin-left: 10px;
         font-size: 13px;
     }
+    .wrapper {
+        display: -webkit-inline-box;
+        line-height: 2.75em;
+        vertical-align: inherit;
+    }
     .info-head {
         font-weight: bold;
         margin-bottom: 10px;
@@ -95,6 +100,9 @@
             font-size: 10px;
         }
         margin-bottom: 10px;
+    }
+    .float-l {
+        float: left;
     }
     .severity {
         padding: 5px 5px 5px 3px;
